--- a/theBrexorcism/Base.lproj/Main.storyboard
+++ b/theBrexorcism/Base.lproj/Main.storyboard
@@ -31,7 +31,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="The Brexorcism" id="i7b-Bt-y3H"/>
+                    <navigationItem key="navigationItem" title="The Brexorcism" id="i7b-Bt-y3H">
+                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="vDI-zj-xJh">
+                            <connections>
+                                <action selector="logOut:" destination="vXZ-lx-hvc" id="IfN-aq-nIX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="tableView" destination="shg-nW-pmM" id="Xpd-Wf-uww"/>
