--- a/theBrexorcism/Base.lproj/Main.storyboard
+++ b/theBrexorcism/Base.lproj/Main.storyboard
@@ -68,6 +68,47 @@
             </objects>
             <point key="canvasLocation" x="500.5" y="357.5"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="vzG-Fz-Ehq">
+            <objects>
+                <viewController id="OaM-XN-5w6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wah-X5-6jf"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Wc-Yj-fGU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Ek-8Y-laj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="brexton4" translatesAutoresizingMaskIntoConstraints="NO" id="wIL-vS-fC4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OHu-Er-byK">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rules" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZC-4B-2TJ">
+                                        <rect key="frame" x="166" y="21" width="43" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dWr-Vw-hhR">
+                                <rect key="frame" x="0.0" y="63" width="375" height="439"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="whq-ob-fII"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UBl-iZ-GUQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="500.5" y="1173.5"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="iW8-Wn-YXm">
             <objects>
@@ -81,6 +122,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="UOT-AU-x2i" kind="relationship" relationship="viewControllers" id="XR6-wK-m5K"/>
+                        <segue destination="OaM-XN-5w6" kind="relationship" relationship="viewControllers" id="cf6-mE-ShO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BDo-P9-1b8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -227,5 +269,6 @@
     <resources>
         <image name="brexton-1" width="2048" height="1366"/>
         <image name="brexton1" width="2048" height="1366"/>
+        <image name="brexton4" width="768" height="1024"/>
     </resources>
 </document>
