--- a/theBrexorcism/Base.lproj/Main.storyboard
+++ b/theBrexorcism/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="77" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="shg-nW-pmM">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="283" width="375" height="384"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="77" id="QHD-St-tpc" customClass="ladderCell">
@@ -32,7 +32,7 @@
                                                     </state>
                                                     <connections>
                                                         <action selector="challengeButton:" destination="QHD-St-tpc" eventType="touchUpInside" id="nX3-oE-AYv"/>
-                                                        <segue destination="8qH-cD-7JN" kind="presentation" id="dIj-jw-vDG"/>
+                                                        <segue destination="8qH-cD-7JN" kind="presentation" identifier="showChallenge" id="dIj-jw-vDG"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -43,6 +43,19 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="brexton2bw" translatesAutoresizingMaskIntoConstraints="NO" id="Rgj-d1-QzZ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="283"/>
+                            </imageView>
+                            <view alpha="0.44999999999999962" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ewh-p4-ggN">
+                                <rect key="frame" x="0.0" y="271" width="375" height="76"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter the Thunderdome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7j-Z7-jnq">
+                                <rect key="frame" x="97" y="300" width="181" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -124,10 +137,10 @@
             </objects>
             <point key="canvasLocation" x="500.5" y="1173.5"/>
         </scene>
-        <!--View Controller-->
+        <!--ChallengeVC-->
         <scene sceneID="b96-G0-jhy">
             <objects>
-                <viewController id="8qH-cD-7JN" sceneMemberID="viewController">
+                <viewController id="8qH-cD-7JN" customClass="challengeVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cHx-Aa-bMc"/>
                         <viewControllerLayoutGuide type="bottom" id="KhF-Te-k1c"/>
@@ -147,6 +160,9 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="noButton:" destination="8qH-cD-7JN" eventType="touchUpInside" id="Qwk-vW-eHA"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOX-F4-baL">
                                 <rect key="frame" x="187" y="375" width="188" height="292"/>
@@ -156,6 +172,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="yesButton:" destination="8qH-cD-7JN" eventType="touchUpInside" id="Xny-6g-fek"/>
+                                </connections>
                             </button>
                             <view alpha="0.59999999999999964" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gIY-Gg-l9I">
                                 <rect key="frame" x="0.0" y="296" width="375" height="80"/>
@@ -336,6 +355,7 @@
     <resources>
         <image name="brexton-1" width="2048" height="1366"/>
         <image name="brexton1" width="2048" height="1366"/>
+        <image name="brexton2bw" width="2048" height="1536"/>
         <image name="brexton4" width="768" height="1024"/>
         <image name="brexton6bw" width="640" height="640"/>
     </resources>
