--- a/theBrexorcism/Base.lproj/Main.storyboard
+++ b/theBrexorcism/Base.lproj/Main.storyboard
@@ -48,14 +48,16 @@
                             </imageView>
                             <view alpha="0.44999999999999962" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ewh-p4-ggN">
                                 <rect key="frame" x="0.0" y="271" width="375" height="76"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Get Served In The Phamily Room" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7j-Z7-jnq">
+                                        <rect key="frame" x="59" y="27" width="257" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter the Thunderdome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7j-Z7-jnq">
-                                <rect key="frame" x="97" y="300" width="181" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -70,6 +72,7 @@
                     <connections>
                         <outlet property="tableView" destination="shg-nW-pmM" id="Xpd-Wf-uww"/>
                         <segue destination="nPO-k9-5le" kind="show" identifier="showLogin" id="FdL-oP-Urh"/>
+                        <segue destination="vnb-xI-vWv" kind="show" identifier="showDetail" id="mCk-rl-4f3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -215,6 +218,30 @@
             </objects>
             <point key="canvasLocation" x="71.5" y="357.5"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="LKT-O6-36q">
+            <objects>
+                <viewController id="vnb-xI-vWv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3e5-x3-YHY"/>
+                        <viewControllerLayoutGuide type="bottom" id="KDW-sD-Dm9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NCI-o4-yMJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="brexton7bw" translatesAutoresizingMaskIntoConstraints="NO" id="eVg-MT-KNe">
+                                <rect key="frame" x="58" y="170" width="259" height="328"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UYh-cg-ZLh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="946.5" y="-387.5"/>
+        </scene>
         <!--LoginVC-->
         <scene sceneID="Te5-qm-JaL">
             <objects>
@@ -358,5 +385,6 @@
         <image name="brexton2bw" width="2048" height="1536"/>
         <image name="brexton4" width="768" height="1024"/>
         <image name="brexton6bw" width="640" height="640"/>
+        <image name="brexton7bw" width="2448" height="3264"/>
     </resources>
 </document>
