--- a/theBrexorcism/Base.lproj/Main.storyboard
+++ b/theBrexorcism/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="273"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="76" id="nXB-CM-fVl">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="whoAreYou" rowHeight="76" id="nXB-CM-fVl">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nXB-CM-fVl" id="oKB-uQ-uR9">
                                             <autoresizingMask key="autoresizingMask"/>
